# crash-clone

./: .gitignore  CMakeLists.txt  README.md  engine.cfg  export.cfg  rocket.gd
data/: ExecutableName
data/4godot/: blue_trails.res  blue_trails.scn  blue_trails.xml  explosion.gd  explosion.scn  game.scn  green_trails.xml  red_trails.res  red_trails.scn  red_trails.xml  rocket.scn  sceneloader.gd  tiles.scn  tiles.xcf  tileset.res  title.scn  trails.gd  trails.scn  yellow_trails.xml
data/4godot/touch/: touchcontrols.scn
src/: build.sh  buildpnd.sh  crash_main.c  game.c  menu.c
